Optimized graph traversals